--- a/README
+++ b/README
@@ -45,7 +45,7 @@ You can also look for information at:
 
 LICENSE AND COPYRIGHT
 
-Copyright (C) 2011 Cindy Wang (CindyLinz)
+Copyright (C) 2011-2014 Cindy Wang (CindyLinz)
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of either: the GNU General Public License as published
