--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for AnyEvent-MySQL
 
+1.1.0   2014.5.20
+        Fix dependency to Devel::StackTrace in Makefile.PL
+
 1.0.1   2014.5.19
         Fix a word in document.
 
